grammar/.antlr/ExtLogicParser.java
// Generated from c:\Users\digid\Documents\Memes\ExtLogic\grammar\ExtLogicParser.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExtLogicParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SingleLineComment=1, OpenBrace=2, CloseBrace=3, OpenParenthesis=4, CloseParenthesis=5, 
		SemiColon=6, Comma=7, Assign=8, PlusPlus=9, MinusMinus=10, Plus=11, Minus=12, 
		Not=13, Multiply=14, Divide=15, Modulus=16, LessThan=17, GreaterThan=18, 
		LessThanEquals=19, GreaterThanEquals=20, Equivalent=21, StrictEquals=22, 
		NotEquals=23, And=24, Or=25, MultiplyAssign=26, DivideAssign=27, ModulusAssign=28, 
		PlusAssign=29, MinusAssign=30, BooleanLiteral=31, DecimalLiteral=32, FunctionKeyword=33, 
		WhileKeyword=34, VariableKeyword=35, SetKeyword=36, IfKeyword=37, ElseKeyword=38, 
		ReturnKeyword=39, ImportKeyword=40, EndKeyword=41, ReservedKeyword=42, 
		Identifier=43, StringLiteral=44, WS=45;
	public static final int
		RULE_program = 0, RULE_sourceElements = 1, RULE_sourceElement = 2, RULE_statement = 3, 
		RULE_block = 4, RULE_statementList = 5, RULE_importStatement = 6, RULE_endStatement = 7, 
		RULE_variableStatement = 8, RULE_variableModifier = 9, RULE_variableDeclaration = 10, 
		RULE_functionDeclaration = 11, RULE_formalParameterList = 12, RULE_formalParameterArg = 13, 
		RULE_functionBody = 14, RULE_returnStatement = 15, RULE_arguments = 16, 
		RULE_argument = 17, RULE_singleExpression = 18, RULE_assignmentOperator = 19, 
		RULE_literal = 20, RULE_reserved = 21, RULE_emptyStatement = 22, RULE_expressionStatement = 23, 
		RULE_ifStatement = 24, RULE_whileStatement = 25, RULE_identifier = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "sourceElements", "sourceElement", "statement", "block", "statementList", 
			"importStatement", "endStatement", "variableStatement", "variableModifier", 
			"variableDeclaration", "functionDeclaration", "formalParameterList", 
			"formalParameterArg", "functionBody", "returnStatement", "arguments", 
			"argument", "singleExpression", "assignmentOperator", "literal", "reserved", 
			"emptyStatement", "expressionStatement", "ifStatement", "whileStatement", 
			"identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'{'", "'}'", "'('", "')'", "';'", "','", "'='", "'++'", 
			"'--'", "'+'", "'-'", "'!'", "'*'", "'/'", "'%'", "'<'", "'>'", "'<='", 
			"'>='", "'=='", "'==='", "'!='", "'&&'", "'||'", "'*='", "'/='", "'%='", 
			"'+='", "'-='", null, null, "'function'", "'while'", "'var'", "'set'", 
			"'if'", "'else'", "'return'", "'import'", "'end'", "'$$'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SingleLineComment", "OpenBrace", "CloseBrace", "OpenParenthesis", 
			"CloseParenthesis", "SemiColon", "Comma", "Assign", "PlusPlus", "MinusMinus", 
			"Plus", "Minus", "Not", "Multiply", "Divide", "Modulus", "LessThan", 
			"GreaterThan", "LessThanEquals", "GreaterThanEquals", "Equivalent", "StrictEquals", 
			"NotEquals", "And", "Or", "MultiplyAssign", "DivideAssign", "ModulusAssign", 
			"PlusAssign", "MinusAssign", "BooleanLiteral", "DecimalLiteral", "FunctionKeyword", 
			"WhileKeyword", "VariableKeyword", "SetKeyword", "IfKeyword", "ElseKeyword", 
			"ReturnKeyword", "ImportKeyword", "EndKeyword", "ReservedKeyword", "Identifier", 
			"StringLiteral", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ExtLogicParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExtLogicParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ExtLogicParser.EOF, 0); }
		public SourceElementsContext sourceElements() {
			return getRuleContext(SourceElementsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OpenBrace) | (1L << OpenParenthesis) | (1L << SemiColon) | (1L << PlusPlus) | (1L << MinusMinus) | (1L << Minus) | (1L << Not) | (1L << BooleanLiteral) | (1L << DecimalLiteral) | (1L << FunctionKeyword) | (1L << WhileKeyword) | (1L << VariableKeyword) | (1L << SetKeyword) | (1L << IfKeyword) | (1L << ReturnKeyword) | (1L << ImportKeyword) | (1L << EndKeyword) | (1L << Identifier) | (1L << StringLiteral))) != 0)) {
				{
				setState(54);
				sourceElements();
				}
			}

			setState(57);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SourceElementsContext extends ParserRuleContext {
		public List<SourceElementContext> sourceElement() {
			return getRuleContexts(SourceElementContext.class);
		}
		public SourceElementContext sourceElement(int i) {
			return getRuleContext(SourceElementContext.class,i);
		}
		public SourceElementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceElements; }
	}

	public final SourceElementsContext sourceElements() throws RecognitionException {
		SourceElementsContext _localctx = new SourceElementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sourceElements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(59);
				sourceElement();
				}
				}
				setState(62); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OpenBrace) | (1L << OpenParenthesis) | (1L << SemiColon) | (1L << PlusPlus) | (1L << MinusMinus) | (1L << Minus) | (1L << Not) | (1L << BooleanLiteral) | (1L << DecimalLiteral) | (1L << FunctionKeyword) | (1L << WhileKeyword) | (1L << VariableKeyword) | (1L << SetKeyword) | (1L << IfKeyword) | (1L << ReturnKeyword) | (1L << ImportKeyword) | (1L << EndKeyword) | (1L << Identifier) | (1L << StringLiteral))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SourceElementContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public SourceElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceElement; }
	}

	public final SourceElementContext sourceElement() throws RecognitionException {
		SourceElementContext _localctx = new SourceElementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sourceElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public VariableStatementContext variableStatement() {
			return getRuleContext(VariableStatementContext.class,0);
		}
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public EmptyStatementContext emptyStatement() {
			return getRuleContext(EmptyStatementContext.class,0);
		}
		public EndStatementContext endStatement() {
			return getRuleContext(EndStatementContext.class,0);
		}
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public TerminalNode SemiColon() { return getToken(ExtLogicParser.SemiColon, 0); }
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(78);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OpenBrace:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				block();
				}
				break;
			case VariableKeyword:
			case SetKeyword:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				variableStatement();
				}
				break;
			case ImportKeyword:
				enterOuterAlt(_localctx, 3);
				{
				setState(68);
				importStatement();
				}
				break;
			case SemiColon:
				enterOuterAlt(_localctx, 4);
				{
				setState(69);
				emptyStatement();
				}
				break;
			case EndKeyword:
				enterOuterAlt(_localctx, 5);
				{
				setState(70);
				endStatement();
				}
				break;
			case OpenParenthesis:
			case PlusPlus:
			case MinusMinus:
			case Minus:
			case Not:
			case BooleanLiteral:
			case DecimalLiteral:
			case Identifier:
			case StringLiteral:
				enterOuterAlt(_localctx, 6);
				{
				setState(71);
				expressionStatement();
				setState(72);
				match(SemiColon);
				}
				break;
			case IfKeyword:
				enterOuterAlt(_localctx, 7);
				{
				setState(74);
				ifStatement();
				}
				break;
			case ReturnKeyword:
				enterOuterAlt(_localctx, 8);
				{
				setState(75);
				returnStatement();
				}
				break;
			case FunctionKeyword:
				enterOuterAlt(_localctx, 9);
				{
				setState(76);
				functionDeclaration();
				}
				break;
			case WhileKeyword:
				enterOuterAlt(_localctx, 10);
				{
				setState(77);
				whileStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode OpenBrace() { return getToken(ExtLogicParser.OpenBrace, 0); }
		public TerminalNode CloseBrace() { return getToken(ExtLogicParser.CloseBrace, 0); }
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(OpenBrace);
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OpenBrace) | (1L << OpenParenthesis) | (1L << SemiColon) | (1L << PlusPlus) | (1L << MinusMinus) | (1L << Minus) | (1L << Not) | (1L << BooleanLiteral) | (1L << DecimalLiteral) | (1L << FunctionKeyword) | (1L << WhileKeyword) | (1L << VariableKeyword) | (1L << SetKeyword) | (1L << IfKeyword) | (1L << ReturnKeyword) | (1L << ImportKeyword) | (1L << EndKeyword) | (1L << Identifier) | (1L << StringLiteral))) != 0)) {
				{
				setState(81);
				statementList();
				}
			}

			setState(84);
			match(CloseBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementListContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementList; }
	}

	public final StatementListContext statementList() throws RecognitionException {
		StatementListContext _localctx = new StatementListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statementList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(86);
				statement();
				}
				}
				setState(89); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OpenBrace) | (1L << OpenParenthesis) | (1L << SemiColon) | (1L << PlusPlus) | (1L << MinusMinus) | (1L << Minus) | (1L << Not) | (1L << BooleanLiteral) | (1L << DecimalLiteral) | (1L << FunctionKeyword) | (1L << WhileKeyword) | (1L << VariableKeyword) | (1L << SetKeyword) | (1L << IfKeyword) | (1L << ReturnKeyword) | (1L << ImportKeyword) | (1L << EndKeyword) | (1L << Identifier) | (1L << StringLiteral))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportStatementContext extends ParserRuleContext {
		public TerminalNode ImportKeyword() { return getToken(ExtLogicParser.ImportKeyword, 0); }
		public TerminalNode StringLiteral() { return getToken(ExtLogicParser.StringLiteral, 0); }
		public TerminalNode SemiColon() { return getToken(ExtLogicParser.SemiColon, 0); }
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_importStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(ImportKeyword);
			setState(92);
			match(StringLiteral);
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(93);
				match(SemiColon);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndStatementContext extends ParserRuleContext {
		public TerminalNode EndKeyword() { return getToken(ExtLogicParser.EndKeyword, 0); }
		public TerminalNode SemiColon() { return getToken(ExtLogicParser.SemiColon, 0); }
		public EndStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endStatement; }
	}

	public final EndStatementContext endStatement() throws RecognitionException {
		EndStatementContext _localctx = new EndStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_endStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(EndKeyword);
			setState(97);
			match(SemiColon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableStatementContext extends ParserRuleContext {
		public VariableModifierContext variableModifier() {
			return getRuleContext(VariableModifierContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public TerminalNode SemiColon() { return getToken(ExtLogicParser.SemiColon, 0); }
		public VariableStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableStatement; }
	}

	public final VariableStatementContext variableStatement() throws RecognitionException {
		VariableStatementContext _localctx = new VariableStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_variableStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			variableModifier();
			setState(100);
			variableDeclaration();
			setState(101);
			match(SemiColon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableModifierContext extends ParserRuleContext {
		public TerminalNode SetKeyword() { return getToken(ExtLogicParser.SetKeyword, 0); }
		public TerminalNode VariableKeyword() { return getToken(ExtLogicParser.VariableKeyword, 0); }
		public VariableModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableModifier; }
	}

	public final VariableModifierContext variableModifier() throws RecognitionException {
		VariableModifierContext _localctx = new VariableModifierContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_variableModifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_la = _input.LA(1);
			if ( !(_la==VariableKeyword || _la==SetKeyword) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode Assign() { return getToken(ExtLogicParser.Assign, 0); }
		public SingleExpressionContext singleExpression() {
			return getRuleContext(SingleExpressionContext.class,0);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_variableDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			identifier();
			setState(106);
			match(Assign);
			setState(107);
			singleExpression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclarationContext extends ParserRuleContext {
		public TerminalNode FunctionKeyword() { return getToken(ExtLogicParser.FunctionKeyword, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode OpenParenthesis() { return getToken(ExtLogicParser.OpenParenthesis, 0); }
		public TerminalNode CloseParenthesis() { return getToken(ExtLogicParser.CloseParenthesis, 0); }
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public FormalParameterListContext formalParameterList() {
			return getRuleContext(FormalParameterListContext.class,0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_functionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(FunctionKeyword);
			setState(110);
			identifier();
			setState(111);
			match(OpenParenthesis);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Identifier) {
				{
				setState(112);
				formalParameterList();
				}
			}

			setState(115);
			match(CloseParenthesis);
			setState(116);
			functionBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalParameterListContext extends ParserRuleContext {
		public List<FormalParameterArgContext> formalParameterArg() {
			return getRuleContexts(FormalParameterArgContext.class);
		}
		public FormalParameterArgContext formalParameterArg(int i) {
			return getRuleContext(FormalParameterArgContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(ExtLogicParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(ExtLogicParser.Comma, i);
		}
		public FormalParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formalParameterList; }
	}

	public final FormalParameterListContext formalParameterList() throws RecognitionException {
		FormalParameterListContext _localctx = new FormalParameterListContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_formalParameterList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			formalParameterArg();
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(119);
				match(Comma);
				setState(120);
				formalParameterArg();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalParameterArgContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public FormalParameterArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formalParameterArg; }
	}

	public final FormalParameterArgContext formalParameterArg() throws RecognitionException {
		FormalParameterArgContext _localctx = new FormalParameterArgContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_formalParameterArg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionBodyContext extends ParserRuleContext {
		public TerminalNode OpenBrace() { return getToken(ExtLogicParser.OpenBrace, 0); }
		public TerminalNode CloseBrace() { return getToken(ExtLogicParser.CloseBrace, 0); }
		public SourceElementsContext sourceElements() {
			return getRuleContext(SourceElementsContext.class,0);
		}
		public FunctionBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBody; }
	}

	public final FunctionBodyContext functionBody() throws RecognitionException {
		FunctionBodyContext _localctx = new FunctionBodyContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_functionBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(OpenBrace);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OpenBrace) | (1L << OpenParenthesis) | (1L << SemiColon) | (1L << PlusPlus) | (1L << MinusMinus) | (1L << Minus) | (1L << Not) | (1L << BooleanLiteral) | (1L << DecimalLiteral) | (1L << FunctionKeyword) | (1L << WhileKeyword) | (1L << VariableKeyword) | (1L << SetKeyword) | (1L << IfKeyword) | (1L << ReturnKeyword) | (1L << ImportKeyword) | (1L << EndKeyword) | (1L << Identifier) | (1L << StringLiteral))) != 0)) {
				{
				setState(129);
				sourceElements();
				}
			}

			setState(132);
			match(CloseBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStatementContext extends ParserRuleContext {
		public TerminalNode ReturnKeyword() { return getToken(ExtLogicParser.ReturnKeyword, 0); }
		public TerminalNode SemiColon() { return getToken(ExtLogicParser.SemiColon, 0); }
		public SingleExpressionContext singleExpression() {
			return getRuleContext(SingleExpressionContext.class,0);
		}
		public ReturnStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatement; }
	}

	public final ReturnStatementContext returnStatement() throws RecognitionException {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_returnStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(ReturnKeyword);
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OpenParenthesis) | (1L << PlusPlus) | (1L << MinusMinus) | (1L << Minus) | (1L << Not) | (1L << BooleanLiteral) | (1L << DecimalLiteral) | (1L << Identifier) | (1L << StringLiteral))) != 0)) {
				{
				setState(135);
				singleExpression(0);
				}
			}

			setState(138);
			match(SemiColon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
